<resources>
    <string name="app_name">Driving School</string>
    <string name="todo">TODO</string>
    <string name="car">car</string>
    <string name="driving_sikh_lo_fraandz">Driving Sikh Lo Fraandz</string>
    <string name="textview">TextView</string>
    <string name="dashboard">DashBoard</string>
    <string name="made_for_project">Made for Project</string>
    <string name="forget_password">Forget Password?</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="dashboard1">Dashboard1</string>
    <string name="title_activity_trial_card">trialCard</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_nav_test">NavTest</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Email">Email</string>
    <string name="color">Color</string>
    <string name="company">Company</string>
    <string name="model_no">Model no.</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_retrive_maps">Map</string>
    <string name="toast_sending_sms">Sending SMS</string>

    <string-array name="Clnames">
        <item>Client 1</item>
        <item>Client 2</item>
        <item>Client 3</item>
        <item>Client 4</item>
    </string-array>
    <string-array name="Tnames">
        <item>Trainer 1</item>
        <item>Trainer 2</item>
        <item>Trainer 3</item>
        <item>Trainer 4</item>
    </string-array>
    <string-array name="Crnames">
        <item>Car 1</item>
        <item>Car 2</item>
        <item>Car 3</item>
        <item>Car 4</item>
    </string-array>
    <string-array name="Time">
        <item>10am to 11am</item>
        <item>12pm to 1pm</item>
        <item>3pm to 4pm</item>
        <item>5pm to 6pm</item>
    </string-array>

    <string name="permission_alert_dialog_title">Requesting SMS permission</string>
    <string name="permission_dialog_message">The app will now request your permission to send and read SMS related services.</string>

    <string name="error_invalid_phone_number">Invalid phone number</string>
    <string name="action_ok">OK</string>

</resources>