<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="123dp"
        android:layout_height="86dp"
        android:contentDescription="@string/todo"
        android:transitionName="logo_image"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="logo_text"
        android:text="@string/hello_there_welcome_back"
        android:textSize="30sp"
        android:fontFamily="@font/bungee_regular"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic_regular"
        android:transitionName="logo_text"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_e_mail"
            android:transitionName="logo_username"
            android:hint="@string/Email"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:transitionName="logo_password"
            android:hint="@string/password"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <Switch-->
<!--            android:id="@+id/active"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:gravity="end"-->
<!--            android:text="Remember me"/>-->

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:id="@+id/forget_password"
            android:text="@string/forget_password" />

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/login_progess_bar"
            android:layout_gravity="center"
            tools:targetApi="lollipop"
            android:visibility="gone"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:id="@+id/login_btn"
            android:onClick="login_btn"
            android:background="@drawable/button_rounded"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:id="@+id/btn_signup"
            android:text="@string/new_user_sign_up"
            android:textColor="#000"
            android:onClick="btn_signup"/>


    </LinearLayout>

    </LinearLayout>


    
    
</ScrollView>