<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_user"
            android:layout_centerVertical="true"
            app:civ_border_width="2dp"
            app:civ_border_color="#fff"/>

        <TextView
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_toRightOf="@+id/img2"
            android:layout_marginStart="25dp"/>

        <TextView
            android:id="@+id/modeltext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_no"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_toRightOf="@+id/img2"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/nametext"/>

        <TextView
            android:id="@+id/companytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_toRightOf="@+id/img2"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/modeltext"/>

        <TextView
            android:id="@+id/colortext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_toRightOf="@+id/img2"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/companytext"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>